--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: '>=2.18.1 <3.0.0'
 
 dependencies:
   flutter:
@@ -14,8 +14,9 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  get: ^4.6.1
-  youtube_player_flutter: ^8.0.0
+  get: ^4.6.5
+  youtube_player_flutter: ^8.1.0
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
